# drf-mock-response

./: README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  python-publish.yml
drf_mocker/: mixins.py
