[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drf-mock-response"
version = "0.1.0"
description = "Reusable mock response views for Django REST Framework"
readme = "README.md"
authors = [{ name="Ali Bagheri" }]
license = { text="MIT" }
requires-python = ">=3.10"
dependencies = ["djangorestframework>=3.14"]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
